# wings

./: .gitignore  CHANGELOG.md  CHANGELOG_TF.md  CLAUDE.md  db.sqlite3  pyproject.toml
.github/workflows/: _tf-apply.yml  _tf-plan.yml  infra-deploy-app-service.yml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py  0002_userextrainfo_role.py
deployment/: common_instructions.md
deployment/app_service/: VERSIONING.md  execution_log.md  plan.md
deployment/app_service/terraform/: CHANGELOG.md
deployment/app_service/terraform/.terraform/: terraform.tfstate
deployment/app_service/terraform/.terraform/modules/: modules.json
deployment/app_service/terraform/environments/dev/: backend.tf  main.tf  outputs.tf
deployment/app_service/terraform/environments/prod/: backend.tf  main.tf  outputs.tf  variables.tf
deployment/app_service/terraform/environments/qa/: backend.tf  main.tf  outputs.tf  terraform.tfvars
deployment/app_service/terraform/environments/sandbox/: main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup
deployment/app_service/terraform/modules/resource_group/: main.tf  variables.tf
doc/: architecture.md  family_onboarding.md  setup.md
family/: urls.py  views.py
templates/: home.html
templates/family/: dashboard.html
tests/: conftest.py
tests/unit/accounts/: test_models.py
tests/unit/family/: test_views.py
tests/unit/wings/: test_adapters.py  test_context_processors.py  test_views.py
wings/: adapters.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
(+1 files in other folders)
